Updated to  latest version of Java Sample code